# ranga

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  ROADMAP.md  SECURITY.md  codecov.yml  deny.toml
.github/workflows/: ci.yml  release.yml
benches/: blend.rs  color_convert.rs  color_science.rs  composite.rs  filter.rs  gpu.rs  histogram.rs  history.csv  icc.rs  spectral.rs  transform.rs
docs/architecture/: overview.md
docs/decisions/: 001-pure-rust-core.md  002-semver-versioning.md  003-packed-u32-gpu-shaders.md  004-feature-gated-optional-deps.md  005-mabda-gpu-foundation.md  006-pixelbuffer-encapsulation.md
docs/development/: migration-guide.md  roadmap.md  threat-model.md
docs/guides/: performance.md  testing.md  troubleshooting.md
docs/guides/features/: blend-modes.md  color-science.md  compositing.md  filters.md  gpu-compute.md  pixel-buffers.md  transforms.md
examples/: advanced_filters.rs  basic_blend.rs  buffer_pool_video.rs  color_convert.rs  compositing.rs  filter_pipeline.rs  gpu_compute.rs  histogram_analysis.rs  icc_profile.rs  spectral_analysis.rs  transforms.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_blend.rs  fuzz_blur.rs  fuzz_composite.rs  fuzz_convert.rs  fuzz_filter.rs  fuzz_icc.rs  fuzz_lut.rs  fuzz_transform.rs
scripts/: bench-history.sh  version-bump.sh
src/: blend.rs  color.rs  composite.rs  convert.rs  error.rs  filter.rs  histogram.rs  hwaccel.rs  icc.rs  lib.rs  pixel.rs  spectral.rs  transform.rs
src/gpu/: buffer.rs  context.rs  mod.rs  pipeline.rs  shaders.rs
supply-chain/: audits.toml  config.toml
tests/: edge_cases.rs  integration.rs  photoshop_reference.rs  proptest.proptest-regressions  proptest.rs  spectral.rs  visual_regression.rs
